--- a/Test/app/src/main/res/menu/drawer_menu.xml
+++ b/Test/app/src/main/res/menu/drawer_menu.xml
@@ -6,28 +6,24 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_message"
-            android:title="@string/message" />
+            android:icon="@drawable/ic_nearby"
+            android:title="@string/Nearby" />
         <item
             android:id="@+id/nav_open"
-            android:icon="@drawable/ic_open"
-            android:title="@string/open_tickets" />
-        <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_mytickets"
-            android:title="@string/my_tickets" />
+            android:icon="@drawable/ic_breakinform"
+            android:title="@string/Break" />
     </group>
 
     <item android:title="@string/communicate">
         <menu>
             <item
                 android:id="@+id/nav_share"
-                android:icon="@drawable/ic_share"
-                android:title="@string/share" />
+                android:icon="@drawable/ic_inform"
+                android:title="@string/Inform" />
             <item
                 android:id="@+id/nav_send"
-                android:icon="@drawable/ic_send"
-                android:title="@string/send" />
+                android:icon="@drawable/ic_feedback"
+                android:title="@string/FeedBack" />
         </menu>
     </item>
 
