--- a/Test/app/src/main/res/layout/product_list.xml
+++ b/Test/app/src/main/res/layout/product_list.xml
@@ -7,7 +7,7 @@
 
     <RelativeLayout
         android:layout_width="410dp"
-        android:layout_height="118dp"
+        android:layout_height="165dp"
         android:background="@drawable/edittextstyle"
         android:padding="3dp"
         tools:ignore="UselessParent">
@@ -15,20 +15,19 @@
         <Button
             android:id="@+id/button3"
             android:layout_width="407dp"
-            android:layout_height="115dp"
+            android:layout_height="162dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="0dp"
-            android:layout_marginLeft="0dp"
-            android:layout_marginTop="0dp"
+            android:layout_marginStart="-31dp"
+            android:layout_marginLeft="-31dp"
+            android:layout_marginTop="6dp"
             android:visibility="visible" />
 
         <TextView
-            android:id="@+id/textViewtixstatus"
+            android:id="@+id/textViewTitle"
             android:layout_width="49dp"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/textViewvmodel"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentBottom="true"
@@ -37,16 +36,14 @@
             android:layout_marginEnd="32dp"
             android:layout_marginRight="32dp"
             android:layout_marginBottom="16dp"
-            android:layout_toStartOf="@+id/textViewvmodel"
-            android:layout_toLeftOf="@+id/textViewvmodel"
             android:text="@string/tixstatus"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
             android:textColor="#000000" />
 
         <TextView
-            android:id="@+id/textViewmembershipid"
-            android:layout_width="wrap_content"
-            android:layout_height="55dp"
+            android:id="@+id/textViewRaiting"
+            android:layout_width="59dp"
+            android:layout_height="45dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
@@ -54,26 +51,25 @@
             android:layout_marginStart="93dp"
             android:layout_marginLeft="93dp"
             android:layout_marginTop="13dp"
-            android:layout_marginBottom="47dp"
+            android:layout_marginBottom="104dp"
             android:text="@string/membershipid"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+            tools:ignore="RelativeOverlap" />
 
         <TextView
-            android:id="@+id/textViewregno"
-            android:layout_width="117dp"
-            android:layout_height="55dp"
+            android:id="@+id/textViewDistance"
+            android:layout_width="184dp"
+            android:layout_height="23dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="13dp"
-            android:layout_marginLeft="13dp"
+            android:layout_marginStart="-3dp"
+            android:layout_marginLeft="-3dp"
             android:layout_marginTop="13dp"
-            android:layout_marginEnd="63dp"
-            android:layout_marginRight="63dp"
-            android:layout_marginBottom="47dp"
-            android:layout_toEndOf="@+id/textViewmembershipid"
-            android:layout_toRightOf="@+id/textViewmembershipid"
+            android:layout_marginEnd="7dp"
+            android:layout_marginRight="7dp"
+            android:layout_marginBottom="126dp"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:text="@string/regno"
@@ -81,9 +77,26 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textViewvmodel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/textViewInfo"
+            android:layout_width="132dp"
+            android:layout_height="61dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="75dp"
+            android:layout_marginEnd="186dp"
+            android:layout_marginRight="186dp"
+            android:layout_marginBottom="26dp"
+            android:text="@string/vmodel"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+            android:textStyle="bold"
+            tools:ignore="RelativeOverlap" />
+
+        <TextView
+            android:id="@+id/textViewPhone"
+            android:layout_width="74dp"
+            android:layout_height="32dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
@@ -91,7 +104,7 @@
             android:layout_marginTop="75dp"
             android:layout_marginEnd="63dp"
             android:layout_marginRight="63dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="55dp"
             android:text="@string/vmodel"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             android:textStyle="bold"
